test(buttongroup): use buttongroup html helper in tests

--- a/tests/visual/src/misc/button-group-rounded.html
+++ b/tests/visual/src/misc/button-group-rounded.html
@@ -25,21 +25,21 @@
 
         <span>null</span>
         <span>
-            <div class="k-button-group">
+            <div is="ButtonGroup">
                 <button is="Button" size="small" rounded="null" icon="bold"></button>
                 <button is="Button" size="small" rounded="null" icon="italic"></button>
                 <button is="Button" size="small" rounded="null" icon="underline"></button>
             </div>
         </span>
         <span>
-            <div class="k-button-group">
+            <div is="ButtonGroup">
                 <button is="Button" size="medium" rounded="null" icon="bold"></button>
                 <button is="Button" size="medium" rounded="null" icon="italic"></button>
                 <button is="Button" size="medium" rounded="null" icon="underline"></button>
             </div>
         </span>
         <span>
-            <div class="k-button-group">
+            <div is="ButtonGroup">
                 <button is="Button" size="large" rounded="null" icon="bold"></button>
                 <button is="Button" size="large" rounded="null" icon="italic"></button>
                 <button is="Button" size="large" rounded="null" icon="underline"></button>
@@ -48,21 +48,21 @@
 
         <span>small</span>
         <span>
-            <div class="k-button-group">
+            <div is="ButtonGroup">
                 <button is="Button" size="small" rounded="small" icon="bold"></button>
                 <button is="Button" size="small" rounded="small" icon="italic"></button>
                 <button is="Button" size="small" rounded="small" icon="underline"></button>
             </div>
         </span>
         <span>
-            <div class="k-button-group">
+            <div is="ButtonGroup">
                 <button is="Button" size="medium" rounded="small" icon="bold"></button>
                 <button is="Button" size="medium" rounded="small" icon="italic"></button>
                 <button is="Button" size="medium" rounded="small" icon="underline"></button>
             </div>
         </span>
         <span>
-            <div class="k-button-group">
+            <div is="ButtonGroup">
                 <button is="Button" size="large" rounded="small" icon="bold"></button>
                 <button is="Button" size="large" rounded="small" icon="italic"></button>
                 <button is="Button" size="large" rounded="small" icon="underline"></button>
@@ -71,21 +71,21 @@
 
         <span>medium</span>
         <span>
-            <div class="k-button-group">
+            <div is="ButtonGroup">
                 <button is="Button" size="small" rounded="medium" icon="bold"></button>
                 <button is="Button" size="small" rounded="medium" icon="italic"></button>
                 <button is="Button" size="small" rounded="medium" icon="underline"></button>
             </div>
         </span>
         <span>
-            <div class="k-button-group">
+            <div is="ButtonGroup">
                 <button is="Button" size="medium" rounded="medium" icon="bold"></button>
                 <button is="Button" size="medium" rounded="medium" icon="italic"></button>
                 <button is="Button" size="medium" rounded="medium" icon="underline"></button>
             </div>
         </span>
         <span>
-            <div class="k-button-group">
+            <div is="ButtonGroup">
                 <button is="Button" size="large" rounded="medium" icon="bold"></button>
                 <button is="Button" size="large" rounded="medium" icon="italic"></button>
                 <button is="Button" size="large" rounded="medium" icon="underline"></button>
@@ -94,21 +94,21 @@
 
         <span>large</span>
         <span>
-            <div class="k-button-group">
+            <div is="ButtonGroup">
                 <button is="Button" size="small" rounded="large" icon="bold"></button>
                 <button is="Button" size="small" rounded="large" icon="italic"></button>
                 <button is="Button" size="small" rounded="large" icon="underline"></button>
             </div>
         </span>
         <span>
-            <div class="k-button-group">
+            <div is="ButtonGroup">
                 <button is="Button" size="medium" rounded="large" icon="bold"></button>
                 <button is="Button" size="medium" rounded="large" icon="italic"></button>
                 <button is="Button" size="medium" rounded="large" icon="underline"></button>
             </div>
         </span>
         <span>
-            <div class="k-button-group">
+            <div is="ButtonGroup">
                 <button is="Button" size="large" rounded="large" icon="bold"></button>
                 <button is="Button" size="large" rounded="large" icon="italic"></button>
                 <button is="Button" size="large" rounded="large" icon="underline"></button>
@@ -117,21 +117,21 @@
 
         <span>full</span>
         <span>
-            <div class="k-button-group">
+            <div is="ButtonGroup">
                 <button is="Button" size="small" rounded="full" icon="bold"></button>
                 <button is="Button" size="small" rounded="full" icon="italic"></button>
                 <button is="Button" size="small" rounded="full" icon="underline"></button>
             </div>
         </span>
         <span>
-            <div class="k-button-group">
+            <div is="ButtonGroup">
                 <button is="Button" size="medium" rounded="full" icon="bold"></button>
                 <button is="Button" size="medium" rounded="full" icon="italic"></button>
                 <button is="Button" size="medium" rounded="full" icon="underline"></button>
             </div>
         </span>
         <span>
-            <div class="k-button-group">
+            <div is="ButtonGroup">
                 <button is="Button" size="large" rounded="full" icon="bold"></button>
                 <button is="Button" size="large" rounded="full" icon="italic"></button>
                 <button is="Button" size="large" rounded="full" icon="underline"></button>
