--- a/tests/visual/src/misc/button-group.html
+++ b/tests/visual/src/misc/button-group.html
@@ -26,7 +26,7 @@
 
         <section>
             <div>
-                <div class="k-widget k-button-group">
+                <div is="ButtonGroup">
                     <button is="Button" class="k-group-start">Button</button>
                     <button is="Button" hover>Hover</button>
                     <button is="Button" focus>Focus</button>
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div>
-                <div class="k-widget k-button-group k-button-group-outline">
+                <div is="ButtonGroup" fillMode="outline">
                     <button is="Button" fillMode="outline" class="k-group-start">Button</button>
                     <button is="Button" fillMode="outline" hover>Hover</button>
                     <button is="Button" fillMode="outline" focus>Focus</button>
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div>
-                <div class="k-widget k-button-group k-button-group-flat">
+                <div is="ButtonGroup" fillMode="flat">
                     <button is="Button" fillMode="flat" class="k-group-start">Button</button>
                     <button is="Button" fillMode="flat" hover>Hover</button>
                     <button is="Button" fillMode="flat" focus>Focus</button>
@@ -62,7 +62,7 @@
 
         <section style="background-color: #787878; color: #ffffff;">
             <div>
-                <div class="k-widget k-button-group">
+                <div is="ButtonGroup">
                     <button is="Button" class="k-group-start">Button</button>
                     <button is="Button" hover>Hover</button>
                     <button is="Button" focus>Focus</button>
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div>
-                <div class="k-widget k-button-group k-button-group-outline">
+                <div is="ButtonGroup" fillMode="outline">
                     <button is="Button" fillMode="outline" class="k-group-start">Button</button>
                     <button is="Button" fillMode="outline" hover>Hover</button>
                     <button is="Button" fillMode="outline" focus>Focus</button>
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div>
-                <div class="k-widget k-button-group k-button-group-flat">
+                <div is="ButtonGroup" fillMode="flat">
                     <button is="Button" fillMode="flat" class="k-group-start">Button</button>
                     <button is="Button" fillMode="flat" hover>Hover</button>
                     <button is="Button" fillMode="flat" focus>Focus</button>
@@ -98,7 +98,7 @@
 
         <section style="color: #ff00ff;">
             <div>
-                <div class="k-widget k-button-group">
+                <div is="ButtonGroup">
                     <button is="Button" class="k-group-start">Button</button>
                     <button is="Button" hover>Hover</button>
                     <button is="Button" focus>Focus</button>
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <div>
-                <div class="k-widget k-button-group k-button-group-outline">
+                <div is="ButtonGroup" fillMode="outline">
                     <button is="Button" fillMode="outline" class="k-group-start">Button</button>
                     <button is="Button" fillMode="outline" hover>Hover</button>
                     <button is="Button" fillMode="outline" focus>Focus</button>
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <div>
-                <div class="k-widget k-button-group k-button-group-flat">
+                <div is="ButtonGroup" fillMode="flat">
                     <button is="Button" fillMode="flat" class="k-group-start">Button</button>
                     <button is="Button" fillMode="flat" hover>Hover</button>
                     <button is="Button" fillMode="flat" focus>Focus</button>
