test(floatinglabel): use floating label html helper in tests

--- a/tests/visual/src/misc/floating-label.html
+++ b/tests/visual/src/misc/floating-label.html
@@ -28,157 +28,133 @@
 
         <!-- empty -->
         <div>
-            <span class="k-floating-label-container k-empty">
+            <span is="FloatingLabel" label="Textbox label" empty>
                 <input is="Textbox" />
-                <label class="k-label">Textbox label</label>
             </span>
         </div>
         <div dir="rtl">
-            <span class="k-floating-label-container k-empty">
+            <span is="FloatingLabel" label="Textbox label" empty>
                 <input is="Textbox" />
-                <label class="k-label">Textbox label</label>
             </span>
         </div>
         <div>
-            <span class="k-floating-label-container k-empty">
+            <span is="FloatingLabel" label="Combobox label" empty>
                 <input is="Combobox" />
-                <label class="k-label">Combobox label</label>
             </span>
         </div>
         <div dir="rtl">
-            <span class="k-floating-label-container k-empty">
+            <span is="FloatingLabel" label="Combobox label" empty>
                 <input is="Combobox" />
-                <label class="k-label">Combobox label</label>
             </span>
         </div>
 
         <!-- value -->
         <div>
-            <span class="k-floating-label-container">
+            <span is="FloatingLabel" label="Textbox label">
                 <input is="Textbox" value="Textbox value" />
-                <label class="k-label">Textbox label</label>
             </span>
         </div>
         <div dir="rtl">
-            <span class="k-floating-label-container">
+            <span is="FloatingLabel" label="Textbox label">
                 <input is="Textbox" value="Textbox value" />
-                <label class="k-label">Textbox label</label>
             </span>
         </div>
         <div>
-            <span class="k-floating-label-container">
+            <span is="FloatingLabel" label="Combobox label">
                 <input is="Combobox" value="Combobox value" />
-                <label class="k-label">Combobox label</label>
             </span>
         </div>
         <div dir="rtl">
-            <span class="k-floating-label-container">
+            <span is="FloatingLabel" label="Combobox label">
                 <input is="Combobox" value="Combobox value" />
-                <label class="k-label">Combobox label</label>
             </span>
         </div>
 
         <!--hover-->
         <div>
-            <span class="k-floating-label-container">
+            <span is="FloatingLabel" label="Textbox label">
                 <input is="Textbox" value="Hover" hover />
-                <label class="k-label">Textbox label</label>
             </span>
         </div>
         <div dir="rtl">
-            <span class="k-floating-label-container">
+            <span is="FloatingLabel" label="Textbox label">
                 <input is="Textbox" value="Hover" hover />
-                <label class="k-label">Textbox label</label>
             </span>
         </div>
         <div>
-            <span class="k-floating-label-container">
+            <span is="FloatingLabel" label="Combobox label">
                 <input is="Combobox" value="Hover" hover />
-                <label class="k-label">Combobox label</label>
             </span>
         </div>
         <div dir="rtl">
-            <span class="k-floating-label-container">
+            <span is="FloatingLabel" label="Combobox label">
                 <input is="Combobox" value="Hover" hover />
-                <label class="k-label">Combobox label</label>
             </span>
         </div>
 
         <!-- focus -->
         <div>
-            <span class="k-floating-label-container">
+            <span is="FloatingLabel" label="Textbox label" focus>
                 <input is="Textbox" value="Focus" focus />
-                <label class="k-label">Textbox label</label>
             </span>
         </div>
         <div dir="rtl">
-            <span class="k-floating-label-container">
+            <span is="FloatingLabel" label="Textbox label" focus>
                 <input is="Textbox" value="Focus" focus />
-                <label class="k-label">Textbox label</label>
             </span>
         </div>
         <div>
-            <span class="k-floating-label-container">
+            <span is="FloatingLabel" label="Combobox label" focus>
                 <input is="Combobox" value="Focus" focus/>
-                <label class="k-label">Combobox label</label>
             </span>
         </div>
         <div dir="rtl">
-            <span class="k-floating-label-container">
+            <span is="FloatingLabel" label="Combobox label" focus>
                 <input is="Combobox" value="Focus" focus/>
-                <label class="k-label">Combobox label</label>
             </span>
         </div>
 
          <!--disabled-->
          <div>
-            <span class="k-floating-label-container">
+            <span is="FloatingLabel" label="Textbox label" disabled>
                 <input is="Textbox" value="Disabled" disabled />
-                <label class="k-label">Textbox label</label>
             </span>
         </div>
         <div dir="rtl">
-            <span class="k-floating-label-container">
+            <span is="FloatingLabel" label="Textbox label" disabled>
                 <input is="Textbox" value="Disabled" disabled />
-                <label class="k-label">Textbox label</label>
             </span>
         </div>
         <div>
-            <span class="k-floating-label-container">
+            <span is="FloatingLabel" label="Combobox label" disabled>
                 <input is="Combobox" value="Disabled" disabled />
-                <label class="k-label">Combobox label</label>
             </span>
         </div>
         <div dir="rtl">
-            <span class="k-floating-label-container">
+            <span is="FloatingLabel" label="Combobox label" disabled>
                 <input is="Combobox" value="Disabled" disabled />
-                <label class="k-label">Combobox label</label>
             </span>
         </div>
 
         <!--invalid-->
         <div>
-            <span class="k-floating-label-container">
+            <span is="FloatingLabel" label="Textbox label" invalid>
                 <input is="Textbox" value="Invalid value" invalid />
-                <label class="k-label">Textbox label</label>
             </span>
         </div>
         <div dir="rtl">
-            <span class="k-floating-label-container">
+            <span is="FloatingLabel" label="Textbox label" invalid>
                 <input is="Textbox" value="Invalid value" invalid />
-                <label class="k-label">Textbox label</label>
             </span>
         </div>
         <div>
-            <span class="k-floating-label-container">
+            <span is="FloatingLabel" label="Combobox label" invalid>
                 <input is="Combobox" value="Invalid value" invalid />
-                <label class="k-label">Combobox label</label>
             </span>
         </div>
         <div dir="rtl">
-            <span class="k-floating-label-container">
+            <span is="FloatingLabel" label="Combobox label" invalid>
                 <input is="Combobox" value="Invalid value" invalid />
-                <label class="k-label">Combobox label</label>
             </span>
         </div>
 
