--- a/tests/visual/src/misc/form-field-inputs-react.html
+++ b/tests/visual/src/misc/form-field-inputs-react.html
@@ -131,16 +131,14 @@
                 </div>
 
                 <div class="k-form-field">
-                    <span class="k-floating-label-container k-state-empty">
+                    <span is="FloatingLabel" label="FloatingLabel" empty>
                         <input is="Textbox" />
-                        <label class="k-label">FloatingLabel</label>
                     </span>
                 </div>
 
                 <div class="k-form-field">
-                    <span class="k-floating-label-container k-state-empty k-state-focused">
-                        <input is="Textbox" />
-                        <label class="k-label">FloatingLabel (focused)</label>
+                    <span is="FloatingLabel" label="FloatingLabel (focused)" empty focus>
+                        <input is="Textbox" focus />
                     </span>
                 </div>
 
@@ -308,9 +306,8 @@
                 <div class="k-form-field">
                     <span class="k-label k-label-empty"></span>
                     <div class="k-form-field-wrap">
-                        <span class="k-floating-label-container k-state-empty">
+                        <span is="FloatingLabel" label="FloatingLabel" empty>
                             <input is="Textbox" />
-                            <label class="k-label">FloatingLabel</label>
                         </span>
                     </div>
                 </div>
@@ -318,9 +315,8 @@
                 <div class="k-form-field">
                     <span class="k-label k-label-empty"></span>
                     <div class="k-form-field-wrap">
-                        <span class="k-floating-label-container k-state-empty k-state-focused">
-                            <input is="Textbox" />
-                            <label class="k-label">FloatingLabel (focused)</label>
+                        <span is="FloatingLabel" label="FloatingLabel (focused)" empty focus>
+                            <input is="Textbox" focus />
                         </span>
                     </div>
                 </div>
