--- a/tests/visual/src/misc/form-field-inputs-angular-rtl.html
+++ b/tests/visual/src/misc/form-field-inputs-angular-rtl.html
@@ -152,19 +152,17 @@
 
                 <kendo-form-field class="k-form-field" dir="rtl">
                     <div>
-                        <kendo-floatinglabel class="k-floating-label-container k-state-empty" dir="rtl">
+                        <span is="FloatingLabel" label="FloatingLabel" empty dir="rtl">
                             <input is="Textbox" />
-                            <label class="k-label">FloatingLabel</label>
-                        </kendo-floatinglabel>
+                        </span>
                     </div>
                 </kendo-form-field>
 
                 <kendo-form-field class="k-form-field" dir="rtl">
                     <div>
-                        <kendo-floatinglabel class="k-floating-label-container k-state-empty k-state-focused" dir="rtl">
-                            <input is="Textbox" />
-                            <label class="k-label">FloatingLabel (Focused)</label>
-                        </kendo-floatinglabel>
+                        <span is="FloatingLabel" label="FloatingLabel (Focused)" empty focus dir="rtl">
+                            <input is="Textbox" focus />
+                        </span>
                     </div>
                 </kendo-form-field>
 
@@ -336,20 +334,18 @@
                 <kendo-form-field class="k-form-field" dir="rtl">
                     <span class="k-label k-label-empty"></span>
                     <div class="k-form-field-wrap">
-                        <kendo-floatinglabel class="k-floating-label-container k-state-empty" dir="rtl">
+                        <span is="FloatingLabel" label="FloatingLabel" empty dir="rtl">
                             <input is="Textbox" />
-                            <label class="k-label">FloatingLabel</label>
-                        </kendo-floatinglabel>
+                        </span>
                     </div>
                 </kendo-form-field>
 
                 <kendo-form-field class="k-form-field" dir="rtl">
                     <span class="k-label k-label-empty"></span>
                     <div class="k-form-field-wrap">
-                        <kendo-floatinglabel class="k-floating-label-container k-state-empty k-state-focused" dir="rtl">
-                            <input is="Textbox" />
-                            <label class="k-label">FloatingLabel (Focused)</label>
-                        </kendo-floatinglabel>
+                        <span is="FloatingLabel" label="FloatingLabel (Focused)" empty focus dir="rtl">
+                            <input is="Textbox" focus />
+                        </spanl>
                     </div>
                 </kendo-form-field>
 
