test(daterangepicker): use html helper for visual tests

--- a/tests/visual/src/misc/form-field-dateinputs-angular.html
+++ b/tests/visual/src/misc/form-field-dateinputs-angular.html
@@ -46,22 +46,10 @@
                     </div>
                 </kendo-form-field>
 
-                <kendo-daterange>
-                    <kendo-form-field class="k-form-field">
-                        <label class="k-label">Start (DateRange)</label>
-                        <div>
-                            <input is="DateInput" showSpinButton="false" />
-                        </div>
-                    </kendo-form-field>
-
-                    <kendo-form-field class="k-form-field">
-                        <label class="k-label">End (DateRange)</label>
-                        <div>
-                            <input is="DateInput" showSpinButton="false" />
-                        </div>
-                    </kendo-form-field>
-                    <kendo-daterange-popup></kendo-daterange-popup>
-                </kendo-daterange>
+                <kendo-form-field class="k-form-field">
+                    <label class="k-label">DateRangePicker:</label>
+                    <input is="DateRangePicker" />
+                </kendo-form-field>
 
                 <kendo-form-field class="k-form-field">
                     <label class="k-label">TimePicker:</label>
@@ -98,23 +86,13 @@
                     </div>
                 </kendo-form-field>
 
-                <kendo-daterange>
-                    <kendo-form-field class="k-form-field">
-                        <label class="k-label">Start(DateRange)</label>
 
-                        <div class="k-form-field-wrap">
-                            <input is="DateInput" showSpinButton="false" />
-                        </div>
-                    </kendo-form-field>
-
-                    <kendo-form-field class="k-form-field">
-                        <label class="k-label">End(DateRange)</label>
-                        <div class="k-form-field-wrap">
-                            <input is="DateInput" showSpinButton="false" />
-                        </div>
-                    </kendo-form-field>
-                    <kendo-daterange-popup></kendo-daterange-popup>
-                </kendo-daterange>
+                <kendo-form-field class="k-form-field">
+                    <label class="k-label">DateRangePicker:</label>
+                    <div class="k-form-field-wrap">
+                        <input is="DateRangePicker" />
+                    </div>
+                </kendo-form-field>
 
                 <kendo-form-field class="k-form-field">
                     <label class="k-label">TimePicker:</label>
