--- a/tests/visual/src/misc/form-field-dateinputs-react.html
+++ b/tests/visual/src/misc/form-field-dateinputs-react.html
@@ -42,16 +42,7 @@
 
                 <div class="k-form-field">
                     <label class="k-label">DateRangePicker:</label>
-                    <span class="k-daterangepicker">
-                        <span class="k-floating-label-container">
-                            <input is="DateInput" showSpinButton="false" />
-                            <label class="k-label">Start</label>
-                        </span>
-                        <span class="k-floating-label-container">
-                            <input is="DateInput" showSpinButton="false" />
-                            <label class="k-label">End</label>
-                        </span>
-                    </span>
+                    <input is="DateRangePicker" />
                 </div>
 
                 <div class="k-form-field">
@@ -90,16 +81,7 @@
                 <div class="k-form-field">
                     <label class="k-label">DateRangePicker:</label>
                     <div class="k-form-field-wrap">
-                        <span class="k-daterangepicker">
-                            <span class="k-floating-label-container">
-                                <input is="DateInput" showSpinButton="false" />
-                                <label class="k-label">Start</label>
-                            </span>
-                            <span class="k-floating-label-container">
-                                <input is="DateInput" showSpinButton="false" />
-                                <label class="k-label">End</label>
-                            </span>
-                        </span>
+                        <input is="DateRangePicker" />
                     </div>
                 </div>
 
