feat(scheduler): add ongoing event styles
https://github.com/telerik/kendo-themes/issues/3374

--- a/tests/visual/src/misc/scheduler.html
+++ b/tests/visual/src/misc/scheduler.html
@@ -475,7 +475,7 @@
                                     <span class="k-resize-handle k-resize-n"></span>
                                     <span class="k-resize-handle k-resize-s"></span>
                                 </div>
-                                <div style="top: 111px; height: 34px; width: 166px; left: 2px;" class="k-event">
+                                <div style="top: 111px; height: 34px; width: 166px; left: 2px;" class="k-event k-event-ongoing">
                                     <span class="k-event-actions"></span>
                                     <div>
                                         <div class="k-event-template k-event-time">8:30 AM - 9:00 AM</div>
@@ -487,7 +487,7 @@
                                     <span class="k-resize-handle k-resize-n"></span>
                                     <span class="k-resize-handle k-resize-s"></span>
                                 </div>
-                                <div style="top: 36px; height: 108px; width: 166px; left: 348px;" class="k-event k-state-hover">
+                                <div style="top: 36px; height: 108px; width: 166px; left: 348px;" class="k-event k-state-hover k-event-ongoing">
                                     <span class="k-event-actions">
                                         <i is="Icon" name="reload"></i>
                                     </span>
@@ -501,7 +501,7 @@
                                     <span class="k-resize-handle k-resize-n"></span>
                                     <span class="k-resize-handle k-resize-s"></span>
                                 </div>
-                                <div style="top: 110px; height: 71px; width: 166px; left: 520px;" class="k-event k-state-selected">
+                                <div style="top: 110px; height: 71px; width: 166px; left: 520px;" class="k-event k-state-selected k-event-ongoing">
                                     <span class="k-event-actions"></span>
                                     <div>
                                         <div class="k-event-template k-event-time">8:30 AM - 9:30 AM</div>
@@ -538,7 +538,7 @@
                                     <span class="k-resize-handle k-resize-n"></span>
                                     <span class="k-resize-handle k-resize-s"></span>
                                 </div>
-                                <div style="background-color: rgb(248, 163, 152); border-color: rgb(248, 163, 152); left: 175px; top: 100px; height: 71px; width: 166px;" class="k-event k-event-inverse ">
+                                <div style="background-color: rgb(248, 163, 152); border-color: rgb(248, 163, 152); left: 175px; top: 100px; height: 71px; width: 166px;" class="k-event k-event-inverse k-event-ongoing">
                                         <span class="k-event-actions">
                                         </span>
                                         <div>
@@ -553,7 +553,7 @@
                                         <span class="k-resize-handle k-resize-n"></span>
                                         <span class="k-resize-handle k-resize-s"></span>
                                 </div>
-                                <div style="top: 110px; height: 71px; width: 166px; left: 708px;" class="k-event">
+                                <div style="top: 110px; height: 71px; width: 166px; left: 708px;" class="k-event k-event-ongoing">
                                     <span class="k-event-actions"></span>
                                     <div>
                                         <div class="k-event-template k-event-time">8:30 AM - 9:30 AM</div>
